TNF/URL ui grid customise, records appear -20

--- a/templates/modals/refineDialog.html
+++ b/templates/modals/refineDialog.html
@@ -57,9 +57,9 @@
         <div class="btn-grp d-flex justify-content-end border-top pt-3">
             <button id="cancelNet" class="btn btn-black" data-dismiss="modal" aria-label="Close" ng-click="closeModal();">
                 <i class="fa fa-times" title="cancel" ></i>Cancel</button>
-            <button id="applyNet" class="btn btn-blue" ng-click="closeModal();" ng-disabled="((refineBy == 800 ? search_by_tfn.length < 3 : search_by_tfn.length < 3) || (refineBy == 'url' && (search_by_tfn == '.com' || search_by_tfn == 'com')))">
+            <button id="refine_apply" class="btn btn-blue" ng-click="applyRefineByFilter();" ng-disabled="((refineBy == 800 ? search_by_tfn.length < 3 : search_by_tfn.length < 3) || (refineBy == 'url' && (search_by_tfn == '.com' || search_by_tfn == 'com')))">
                 <i class="fa fa-check" title="apply"></i>Apply</button>
-            <button id="applyNet" class="btn btn-blue"  ng-click="closeModal();"><i class="fa fa-rotate-right"
+            <button id="applyNet" class="btn btn-blue"  ng-click="resetRefineFilter();filter(ranking.type);"><i class="fa fa-rotate-right"
                     title="reset"></i>Reset</button>
         </div>
     </div>
