--- a/templates/modals/networkLogDialog.html
+++ b/templates/modals/networkLogDialog.html
@@ -11,7 +11,7 @@
             <li>
                 <h5>Network</h5>
                 <div class="checkbox">
-                    <input class="radio-custom network_radio" type="radio" id="networks"  name="networkList" ng-model="selectedNetwork" value="All" >
+                    <input class="radio-custom network_radio" type="radio" id="networks"  name="networkList" ng-model="selectedNetwork" value="" >
                         <span class="v-align-middle">{{network_name}}</span></label>
                 </div>
             </li>
@@ -37,7 +37,7 @@
         <ul class="networklist scrollbar">
             <li class="radio" ng-repeat="network in networkLists | filter:networkSearchBy(searchNet, selectedLetter)">
                 <label class="radio">
-                    <input type="radio"  id="networks" class="radio-custom network_radio" name="networkList" ng-model="$parent.selectedNetwork" ng-value="{{network.network_id}}" >
+                    <input type="radio"  id="networks" class="radio-custom network_radio" name="networkList" ng-model="$parent.selectedNetwork" ng-value="{{network.network_id}}" ng-checked="network.network_id == selectedNetwork" >
                     <span ng-if="checkLiveDateStatus(network.live_date)" title="Live: {{getLiveDate(network.live_date)}}">{{network.network_alias}}</span>
                     <span ng-if="!checkLiveDateStatus(network.live_date)" >{{network.network_alias}}</span>
                 </label>
