--- a/templates/network.html
+++ b/templates/network.html
@@ -82,5 +82,5 @@
                 <span ng-if="lifetime_error" >For date range > 1 year, you can select up to 5 categories to enable &quot;Apply&quot; button</span>
             </div>
     </div>
-    <!-- <div id="grid_network" ui-grid="gridOptions" ui-grid-exporter ui-grid-expandable ui-grid-selection ui-grid-pagination ui-grid-grouping class="grid"></div> -->
+    <div id="grid_network" ui-grid="gridNetworkAiringBrand" ui-grid-selection ui-grid-pagination class="grid"></div>
 </div>
