Tracking modal done

--- a/templates/modals/trackModalDialog.html
+++ b/templates/modals/trackModalDialog.html
@@ -14,19 +14,19 @@
         <p>Alert when the following occurs: </p>
         <ul>
             <li class="text-center checkbox" id="track_advertiser_ul" ng-show="track_advertiser">
-                <input type="checkbox"  ng-model="$parent.isAdvSelected">{{isAdvSelected}}
+                <input type="checkbox"  ng-model="$parent.isAdvSelected">
                 <label for="track_advertiser_input" class="checkbox-custom-label">
                 <span class="v-align-middle">New Advertisers are Detected</span>
                 </label>
             </li>
             <li class="text-center checkbox" id="track_brand_ul" ng-show="track_brand">
-                <input type="checkbox"  ng-model="$parent.isBrandSelected">{{isBrandSelected}}
+                <input type="checkbox"  ng-model="$parent.isBrandSelected">
                 <label for="track_brand_input"  class="checkbox-custom-label">
                 <span class="v-align-middle">New Brands are Detected</span>
                 </label>
             </li>
             <li class="text-center checkbox" id="track_creative_ul" ng-show="track_creative" >
-                <input type="checkbox" ng-model="$parent.isCreativeSelected"> {{isCreativeSelected}}
+                <input type="checkbox" ng-model="$parent.isCreativeSelected">
                 <label for="track_creative_input"  class="checkbox-custom-label">
                 <span class="v-align-middle">New Creative are Detected</span>
                 </label>
