--- a/templates/displayHeader.html
+++ b/templates/displayHeader.html
@@ -6,7 +6,7 @@
             <li ng-show="if_creative">Creative: <span ng-bind-html="creative_name | trustAsHtml"></span></li>
             <li ng-show="selectedNetwork!= ''">Network: <span ng-bind-html="selectedNetworkAlias | trustAsHtml"></span></li>
             <li ng-show="selectedNetwork!= ''"" style="margin-top:2px;">
-                <span class="dpi-symbol" style="width:30px;display:inline-grid;margin-left:0px;"><img src="assets/img/dpi_symbol.png"></span>
+                <span class="dpi-symbol" style="width:30px;display:inline-grid;margin-left:0px;"><img src="assets/images/dpi_symbol.png"></span>
             </li>
             <li>Total Airings: <span ng-bind-html="total_airings | trustAsHtml"></span></li>
             <li>National Airings: <span ng-bind-html="national_airings | trustAsHtml"></span></li>
