Admin console Add company, Edit company, delete Company and Active/deactive pop-up

--- a/templates/adminConsole.html
+++ b/templates/adminConsole.html
@@ -21,7 +21,7 @@
             <span class="welcome-text">Welcome ,{{admin.complete_name}}</span>
             <ul class="d-flex justify-content-between align-items-center">
                 <li class="mr-3">
-                    <button class="btn btn-blue" ng-click="openAddUser()"><img class="help"
+                    <button class="btn btn-blue" ng-click="openAddCompany()"><img class="help"
                             src="./assets/images/add-user.svg">Add New Company</button>
                 </li>
                 <li class="mr-3">
