--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3596,7 +3596,66 @@ header.sticky-top {
   position: relative;
   top: -2px;
 }
+.user-verified {
+  color: #fff;
+  background-color: green;
+  padding: 6px;
+}
+.user-not-verified {
+  color: #fff;
+  background-color: #d55755;
+  padding: 7px;
+}
+.user-not-verified-link {
+  color: #00beff;
+  text-decoration: underline;
+  padding-left: 0.5em;
+  cursor: pointer;
+  white-space: nowrap;
+  font-size: 13px;
+  position: absolute;
+}
 
+.modal .modal-header {
+  background: #202b39;
+  padding: 4px 12px 4px;
+  border-radius: 0;
+  border: none;
+}
+.modal .modal-body {
+  padding: 15px;
+}
+.modal-body {
+  position: relative;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 1rem;
+}
+.modal-content {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 100%;
+  pointer-events: auto;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0,0,0,.2);
+  border-radius: .3rem;
+  outline: 0;
+}
+.super-admin-popup ul li {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.d-none {
+  display: none;
+}
 /*common dropdown*/
 
 .common-dropdown {
