--- a/templates/modals/programsDialog.html
+++ b/templates/modals/programsDialog.html
@@ -13,10 +13,9 @@
         <div ng-show="networks_loading">Loading....</div>
         <div ng-hide="networks_loading" id="program_list_div" class="pt-1">
             <ul class="networklist scrollbar">
-                <li class="checkbox " ng-repeat="(key , value) in programs" >
-                    <div ng-repeat="(k , v) in value track by $index" class="network_id_{{v.network_id}} prog_network_id {{v.class}} {{v.same_class}}">
-                        <input type="checkbox" id="airings_{{k}}" name="airings_programs[]" value="{{v.program}}" ng-click="forSingleProgram(v.isSelected)"  ng-model="v.isSelected" class="opt_airing_filter_program  "  cust-attr="network_id_{{v.network_id}}">
-                        <label for="airings_{{k}}">{{v.program}}</label>
+                <li class="checkbox " ng-repeat="(key , value) in programs" id="{{key}}" >
+                    <div ng-repeat="(k , v) in value track by $index" class="network_id_{{v.network_id}} prog_network_id {{v.class}} {{v.same_class}}" ng-if="network_selection.indexOf(v.network_id)!=-1" >
+                        <input type="checkbox" id="airings_{{k}}" name="airings_programs[]" value="{{v.program}}" ng-click="forSingleProgram(v.isSelected)"  ng-model="v.isSelected" class="opt_airing_filter_program"  cust-attr="network_id_{{v.network_id}}">{{v.program}}
                     </div>
                 </li>
             </ul>
